@@ -57,7 +57,7 @@ public class RedisMapTest {
         assertNotNull(vertebrates.put("mammals", mammals));
         Species species = vertebrates.get("mammals");
         assertNotNull(species);
-        assertEquals(species.getAnimals().get(0), mammals.getAnimals().get(0));
+        assertEquals(species.getAnimals().getFirst(), mammals.getAnimals().getFirst());
         assertEquals(1, vertebrates.size());
     }
 
